# Pascalizer

./: .gitignore  PascalHelloWorld (2).txt  PascalWhileTest (2).txt  README.md
Pascalizer/: CMakeLists.txt  PascalBInary.txt  PascalHelloWorld (2).txt  PascalIfTest (2).txt  TestFile.txt
Pascalizer/Pascalizer/: AnalysisMachine.h  ExpressionEvaluationBlock.h  Interpreter.h  Pascalizer.h  ProgramState.h  Tokenizer.h  Tokens.h  ValuesTable.h
Pascalizer/Pascalizer_core/: CMakeLists.txt  Pascalizer_MainWindow.ui
Pascalizer/Pascalizer_core/Headers/: AnalysisMachine.h  AnalysisMachineAccumulators.h  AnalysisMachineStates.h  AnalysisMachine_ExpressionAnalysisBlock.h  ExpressionEvaluationBlock.h  FileModule.h  HierarchicalList.h  IElse.h  IO_ProcessorInterface.h  IProgram.h  IRead.h  IWhile.h  IWrite.h  Instruction.h  Interpreter.h  Pascalizer.h  Pascalizer_MainWindow.h  Pascalizer_MainWindow.ui  ProgramInstructions.h  ProgramState.h  Tokenizer.h  Tokens.h  ValueTable.cpp  ValuesTable.h
Pascalizer/Pascalizer_core/Sources/: AnalysisMachine.cpp  CMakeCache.txt  Pascalizer_MainWindow.cpp  ValueTable.cpp  main.cpp
Pascalizer/Pascalizer_core/UIFiles/: Pascalizer_MainWindow.ui
Pascalizer/base_test/: CMakeLists.txt  Test_AnalysisMachine.cpp  Test_EEB.cpp  Test_Token.cpp
Pascalizer/base_test/Sources/: Test_AnalysisMachine.cpp  Test_EEB.cpp  Test_ProgramInstructions.cpp  Test_Token.cpp  testTokenizer.cpp  test_EEB.cpp
